+ handle localization and theming logic using provider

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -5,5 +5,10 @@
     "quran":"قرأن",
     "ahadeth":"احاديث",
     "tasbeeh":"تسبيح",
-    "radio":"ٌاذاعة"
+    "radio":"ٌاذاعة",
+    "language":"اللغة",
+    "theme":"المظهر",
+    "light":"المضئ",
+    "dark":"مظلم",
+    "settings":"اعدادات"
 }
